mirror existing website 90%

--- a/events.html
+++ b/events.html
@@ -20,7 +20,6 @@
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="events.html" class="active">Events</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -38,32 +37,10 @@
     <div class="container">
       <div class="event-list">
 
-        <!--
-          To add a new event, copy this block and update the date, title, and description:
-
-          <article class="event-item">
-            <div class="event-item__date">Month Day, Year</div>
-            <h3>Event Title</h3>
-            <p>Event description goes here.</p>
-          </article>
-        -->
-
         <article class="event-item">
-          <div class="event-item__date">Example — Update with your events</div>
-          <h3>Annual Garden Party</h3>
-          <p>Join your neighbors for our annual garden party in the Hawthorne Court courtyard. Refreshments provided. All residents welcome.</p>
-        </article>
-
-        <article class="event-item">
-          <div class="event-item__date">Example</div>
-          <h3>Board Meeting</h3>
-          <p>Monthly cooperative board meeting. Open to all shareholders.</p>
-        </article>
-
-        <article class="event-item">
-          <div class="event-item__date">Example</div>
-          <h3>Garden Volunteer Day</h3>
-          <p>Help maintain our beautiful common garden. Tools and gloves provided. Meet at the south entrance.</p>
+          <div class="event-item__date">Wednesday, March 11, 2026 — 8:00 PM</div>
+          <h3>HCC Meeting</h3>
+          <p>Hawthorne Court Council's March 2026 meeting.</p>
         </article>
 
       </div>
