--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
 
   <!-- Hero -->
   <section class="hero">
-    <div class="container">
-      <img src="images/centerCircle.png" alt="Hawthorne Court emblem" class="hero__icon">
-      <h1>Hawthorne Court</h1>
-      <p>Located in the Jackson Heights neighborhood of Queens, New York City. Seven buildings along 76th Street and seven along 77th Street, between 35th Avenue and 37th Avenue.</p>
-      <a href="#about" class="btn">Take a Tour</a>
+    <div class="hero__image">
+      <img src="images/centerCircle.png" alt="Aerial view of Hawthorne Court garden in autumn">
+    </div>
+    <div class="hero__content">
+      <div class="container">
+        <p>Located in the Jackson Heights neighborhood of Queens, New York City. Seven buildings along 76th Street and seven along 77th Street, between 35th Avenue and 37th Avenue.</p>
+      </div>
     </div>
   </section>
 
@@ -39,7 +40,6 @@
   <section id="about" class="section section--alt">
     <div class="container">
       <div class="content-block">
-        <h2>Hawthorne Court</h2>
         <p>Built as a cooperative in 1922, Hawthorne Court was designed by architect George H. Wells for the Queensboro Corporation. Located on 76th and 77th Streets between 37th and 35th Avenues, Hawthorne Court is comprised of fourteen five-story Neo-Georgian buildings that surround a beautifully landscaped interior garden.</p>
         <p>Each street-front has four buildings with identical five-room apartments and three buildings with identical six-room apartments. The five-room apartments are approximately 1,100 square feet and the six-room apartments are approximately 1,300 square feet. Each apartment has three exposures, a fireplace, and a sunroom.</p>
         <p>The sunroom projects into the garden with three sets of double windows, its own full bath, and can be used as an extension of the living area or as a bedroom. The buildings are elevated. Hawthorne Court is a designated landmark located within the Jackson Heights Historic District, and is also listed on the State and National Register of Historic Places.</p>
