--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <ul class="nav__links">
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="events.html">Events</a></li>
+        <li><a href="library.html">Library</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </div>
